k8s-deployment-masterclass/02-blue-green/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-green-app
  namespace: blue-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue-green-app
  strategy:
    blueGreen:
      activeService: blue-green-active-service
      previewService: blue-green-preview-service
      trafficRouting:
        nginx:
          stableIngress: master-unified-ingress
  template:
    metadata:
      labels:
        app: blue-green-app
    spec:
      containers:
      - name: web
        image: hashicorp/http-echo:1.0.0
        imagePullPolicy: IfNotPresent
        args:
        - "-text=Blue-Green Version v2"
        ports:
        - containerPort: 5678
