k8s-deployment-masterclass/02-blue-green/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-preview-service
  namespace: blue-green
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
    name: http
  selector:
    app: blue-green-app
