k8s-deployment-masterclass/02-blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: blue-green
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.local
    http:
      paths:
      - path: /blue-green
        pathType: Prefix
        backend:
          service:
            name: blue-green-active-service
            port:
              number: 80
      - path: /blue-green/preview
        pathType: Prefix
        backend:
          service:
            name: blue-green-preview-service
            port:
              number: 80
